add superjob_api_key in .env.example

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,5 @@ DATABASE_USER="postgres"
 DATABASE_PASSWORD="password"
 DATABASE_PORT="5432"
 DATABASE_HOST="db"
+
+SUPERJOB_API_KEY=v3.r.139102357.df987f5ddf958483a5de626fd908a60d38c81357.87b9bc1736bea42137acdaa4fc2a9cb579ed67c3
