--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,5 @@ EMAIL_USE_TLS=True
 EMAIL_HOST_USER=user@example.com
 EMAIL_HOST_PASSWORD=secret123
 EMAIL_TIMEOUT=10
+
+SUPERJOB_API_KEY=v3.r.139102357.df987f5ddf958483a5de626fd908a60d38c81357.87b9bc1736bea42137acdaa4fc2a9cb579ed67c3
