fixes after first review

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ SECRET_KEY=23984794924798@39485973@h76h@dfhighudfgh
 DJANGO_EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
 DATABASE_URL=postgresql://db_user:userzpassword@db_serverdomain.com/db_name
 ALLOWED_HOSTS=127.0.0.1,localhost,yourdomain.com
+ENGINE=django.db.backends.sqlite3
 
 EMAIL_HOST=smtp.example.com
 EMAIL_PORT=587
