delete city_region_mapping and add him to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,8 @@ key_word.py
 
 test_fixtures.sh
 error.html
+
+app/services/parser/api_parser/city_region_mapping.json
+sqlite3
 staticfiles/
 static/
