--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@hookform/resolvers": "^5.2.2",
     "@inertiajs/inertia": "^0.11.1",
     "@inertiajs/progress": "^0.2.7",
     "@inertiajs/react": "^2.1.5",
@@ -26,10 +27,11 @@
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-hook-form": "^7.60.0",
+    "react-hook-form": "^7.68.0",
     "react-social-icons": "^6.24.0",
     "tailwind-merge": "^3.3.0",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
