--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ dependencies = [
     "whitenoise>=6.11.0",
     "gunicorn>=23.0.0",
     "pre-commit>=4.3.0",
+    "django-phonenumber-field>=8.4.0",
+    "phonenumbers>=9.0.21",
 ]
 
 [dependency-groups]
