--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -20,6 +20,7 @@
     "@mantine/core": "^8.2.4",
     "@mantine/form": "^8.2.4",
     "@mantine/hooks": "^8.2.4",
+    "@reduxjs/toolkit": "^2.11.2",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.12.0",
     "class-variance-authority": "^0.7.1",
@@ -29,6 +30,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.68.0",
+    "react-redux": "^9.2.0",
     "react-social-icons": "^6.24.0",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.11",
